Added new build, status message, tasks delete
